Added additional inputs to dialog
Added inputs in index.html and .input-checkbox

--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
                             required/>
                 </div>
 
+                <div class="input">
+                    <label for="author">Author</label>
+                    <input type="text"
+                            name="author"
+                            id="author"
+                            required/>
+                </div>
+
+                <div class="input">
+                    <label for="page-ct">Page Count</label>
+                    <input type="number"
+                            name="page-ct"
+                            id="page-ct"
+                            required/>
+                </div>
+
+                <div class="input-checkbox">
+                    <label for="read">Has Been Read?</label>
+                    <input type="checkbox"
+                            name="read"
+                            id="read"/>
+                </div>
+
                 <button type="submit" class="dialog-close">Submit</button>
 
             </form>
