--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <input type="text"
                             name="title"
                             id="title"
+                            maxlength = 50
                             required/>
                 </div>
 
@@ -31,6 +32,7 @@
                     <input type="text"
                             name="author"
                             id="author"
+                            maxlength = 30
                             required/>
                 </div>
 
@@ -39,6 +41,7 @@
                     <input type="number"
                             name="page-ct"
                             id="page-ct"
+                            maxlength = 6
                             required/>
                 </div>
 
