Reset dialog values when closing dialog

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="text"
                             name="title"
                             id="title"
-                            maxlength = 50
+                            maxlength="50"
                             required/>
                 </div>
 
@@ -32,7 +32,7 @@
                     <input type="text"
                             name="author"
                             id="author"
-                            maxlength = 30
+                            maxlength="30"
                             required/>
                 </div>
 
@@ -41,7 +41,7 @@
                     <input type="number"
                             name="page-ct"
                             id="page-ct"
-                            maxlength = 6
+                            max="9999"
                             required/>
                 </div>
 
