Added basic input validation to dialog submission

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <input type="number"
                             name="page-ct"
                             id="page-ct"
-                            max="9999"
+                            maxlength="4"
                             required/>
                 </div>
 
