--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input type="text"
                             name="title"
                             id="title"
-                            maxlength="50"
+                            maxlength="40"
                             required/>
                 </div>
 
@@ -41,7 +41,6 @@
                     <input type="number"
                             name="page-ct"
                             id="page-ct"
-                            maxlength="4"
                             required/>
                 </div>
 
@@ -52,8 +51,11 @@
                             id="read"/>
                 </div>
 
-                <button type="submit" class="dialog-close">Submit</button>
-
+                <div class="dialog-buttons">
+                    <button type="submit" class="dialog-submit">Submit</button>
+                    <button class="dialog-close">Cancel</button>
+                </div>
+                
             </form>
 
         </dialog>
